--- a/package.json
+++ b/package.json
@@ -17,16 +17,20 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
+    "d3-ease": "^3.0.1",
     "lucide-react": "^0.456.0",
     "next": "14.2.17",
     "react": "^18",
+    "react-circular-progressbar": "^2.1.0",
     "react-dom": "^18",
     "react-icons": "^5.3.0",
+    "react-move": "^6.5.0",
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7",
     "zustand": "^5.0.1"
   },
   "devDependencies": {
+    "@types/d3-ease": "^3.0.2",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
