--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "next": "14.2.17",
     "react": "^18",
     "react-dom": "^18",
+    "react-dropzone": "^14.3.5",
     "react-icons": "^5.3.0",
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7",
