--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
+    "embla-carousel-react": "^8.5.1",
     "lucide-react": "^0.456.0",
     "next": "14.2.17",
     "react": "^18",
