--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "lucide-react": "^0.456.0",
+    "mongodb": "^6.11.0",
     "next": "14.2.17",
     "react": "^18",
     "react-dom": "^18",
