--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "clsx": "^2.1.1",
     "lucide-react": "^0.456.0",
     "mongodb": "^6.11.0",
+    "mongoose": "^8.8.2",
     "next": "14.2.17",
     "react": "^18",
     "react-dom": "^18",
