--- a/package.json
+++ b/package.json
@@ -19,10 +19,12 @@
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
     "d3-ease": "^3.0.1",
+    "date-fns": "^3.6.0",
     "lucide-react": "^0.456.0",
     "next": "14.2.17",
     "react": "^18",
     "react-circular-progressbar": "^2.1.0",
+    "react-day-picker": "^8.10.1",
     "react-dom": "^18",
     "react-icons": "^5.3.0",
     "react-move": "^6.5.0",
