--- a/package.json
+++ b/package.json
@@ -15,17 +15,18 @@
     "@radix-ui/react-dialog": "^1.1.2",
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-popover": "^1.1.2",
+    "@radix-ui/react-radio-group": "^1.2.1",
     "@radix-ui/react-slot": "^1.1.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
+    "d3-ease": "^3.0.1",
     "date-fns": "^3.6.0",
     "lucide-react": "^0.456.0",
     "next": "14.2.17",
     "react": "^18",
-    "react-day-picker": "^8.10.1",
-    "d3-ease": "^3.0.1",
     "react-circular-progressbar": "^2.1.0",
+    "react-day-picker": "^8.10.1",
     "react-dom": "^18",
     "react-hook-form": "^7.53.2",
     "react-icons": "^5.3.0",
