--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+# File Cache
+src/app/api/services/others/countries_cache.json
+
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
