--- a/package.json
+++ b/package.json
@@ -26,9 +26,9 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
-    "embla-carousel-react": "^8.5.1",
     "d3-ease": "^3.0.1",
     "date-fns": "^3.6.0",
+    "embla-carousel-react": "^8.5.1",
     "lucide-react": "^0.456.0",
     "mongodb": "^6.11.0",
     "mongoose": "^8.8.2",
@@ -48,6 +48,7 @@
   },
   "devDependencies": {
     "@types/d3-ease": "^3.0.2",
+    "@types/mongoose": "^5.11.97",
     "@types/next": "^9.0.0",
     "@types/node": "^20",
     "@types/react": "^18",
