--- a/package.json
+++ b/package.json
@@ -29,13 +29,14 @@
     "@radix-ui/react-toast": "^1.2.2",
     "@radix-ui/react-tooltip": "^1.1.4",
     "@react-native-community/checkbox": "^0.5.17",
+    "axios": "^1.7.9",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
-    "embla-carousel-react": "^8.5.1",
     "d3-ease": "^3.0.1",
     "date-fns": "^3.6.0",
     "dayjs": "^1.11.13",
+    "embla-carousel-react": "^8.5.1",
     "framer-motion": "^11.13.1",
     "lucide-react": "^0.456.0",
     "mongodb": "^6.11.0",
