--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@clerk/elements": "^0.22.0",
     "@clerk/nextjs": "^6.3.2",
     "@emotion/react": "^11.13.5",
     "@emotion/styled": "^11.13.5",
@@ -32,10 +33,10 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
-    "embla-carousel-react": "^8.5.1",
     "d3-ease": "^3.0.1",
     "date-fns": "^3.6.0",
     "dayjs": "^1.11.13",
+    "embla-carousel-react": "^8.5.1",
     "framer-motion": "^11.13.1",
     "lucide-react": "^0.456.0",
     "mongodb": "^6.11.0",
