--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "mongoose": "^8.8.2",
     "next": "14.2.17",
     "react": "^18",
+    "react-big-calendar": "^1.17.0",
     "react-circular-progressbar": "^2.1.0",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18",
@@ -59,6 +60,7 @@
     "@types/next": "^9.0.0",
     "@types/node": "^20",
     "@types/react": "^18",
+    "@types/react-big-calendar": "^1.16.0",
     "@types/react-dom": "^18",
     "eslint": "^8",
     "eslint-config-next": "14.2.17",
