--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
     "lucide-react": "^0.456.0",
     "mongodb": "^6.11.0",
     "mongoose": "^8.8.2",
-    "next": "14.2.17",
+    "next": "^15.1.1",
     "react": "^18",
     "react-big-calendar": "^1.17.0",
     "react-circular-progressbar": "^2.1.0",
