Create Channel Service

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,8 @@
 {
   "yaml.schemas": {
-    "swaggerviewer:openapi": "file:///c%3A/Users/andro/Documents/Program-Project/dashboard-migration-crew/wad-401-up-immigration-dashboard-migration-crew/docs/openapi.yaml"
+    "swaggerviewer:openapi": [
+      "file:///c%3A/Users/andro/Documents/Program-Project/dashboard-migration-crew/wad-401-up-immigration-dashboard-migration-crew/docs/openapi.yaml",
+      "file:///c%3A/Users/andro/Documents/migrationCrew/immigration-dashboard/docs/openapi.yaml"
+    ]
   }
 }
