--- a/.env.example
+++ b/.env.example
@@ -2,3 +2,4 @@ MONGODB_URI="mongodb+srv://<YOUR_USER_NAME>:<YOUR_PASSWORD>@cluster0.jt1z7.mongo
 MONGODB_DB_NAME="Dashboard"
 NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=
 CLERK_SECRET_KEY=
+STRIPE_SECRET_KEY=
