--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "react-icons": "^5.3.0",
     "react-move": "^6.5.0",
     "recharts": "^2.15.1",
+    "stripe": "^17.7.0",
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.23.8",
