--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,4 @@ MONGODB_DB_NAME="Dashboard"
 NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=
 CLERK_SECRET_KEY=
 STRIPE_SECRET_KEY=
+NEXT_PUBLIC_STRIPE_PUBLISHABLE_KEY=
