--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "@radix-ui/react-toast": "^1.2.2",
     "@radix-ui/react-tooltip": "^1.1.4",
     "@react-native-community/checkbox": "^0.5.17",
+    "@stripe/react-stripe-js": "^3.5.1",
+    "@stripe/stripe-js": "^6.1.0",
     "axios": "^1.7.9",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
@@ -41,7 +43,7 @@
     "lucide-react": "^0.456.0",
     "mongodb": "^6.11.0",
     "mongoose": "^8.8.2",
-    "next": "^15.1.1",
+    "next": "^15.2.3",
     "react": "^18",
     "react-big-calendar": "^1.17.0",
     "react-circular-progressbar": "^2.1.0",
