--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "date-fns": "^3.6.0",
     "dayjs": "^1.11.13",
     "embla-carousel-react": "^8.5.1",
+    "firebase": "^11.6.0",
     "framer-motion": "^11.13.1",
     "lucide-react": "^0.456.0",
     "mongodb": "^6.11.0",
